# PhysicsBasedModeling-Demos

./: LICENSE  README.md
Collision-Tests/: CMakeLists.txt
Collision-Tests/tests/: CMakeLists.txt
Collision-Tests/tests/GroundCollision1/: CMakeLists.txt  FiniteElementMesh.h  main.cpp
Collision-Tests/tests/GroundCollision2/: CGSystemWrapper.h  CMakeLists.txt  FiniteElementMesh.h  main.cpp
Collision-Tests/tests/GroundCollision3D/: AnimatedTetrahedronMesh.h  CMakeLists.txt  ConjugateGradient.h  FiniteElementMesh.h  main.cpp
Finite-Element-Tests/: CMakeLists.txt
Finite-Element-Tests/tests/: CMakeLists.txt
Finite-Element-Tests/tests/Demo3D/: AnimatedTetrahedronMesh.h  CMakeLists.txt  main.cpp
Finite-Element-Tests/tests/MembranePinch1/: CMakeLists.txt  main.cpp
Finite-Element-Tests/tests/MembranePinch2/: CMakeLists.txt  main.cpp
Finite-Element-Tests/tests/MembranePinch3/: CMakeLists.txt  main.cpp
Finite-Element-Tests/tests/MembranePinch4/: CMakeLists.txt  FiniteElementMesh.h  main.cpp
Finite-Element-Tests/tests/MembranePinch5/: CGVectorWrapper.h  CMakeLists.txt  FiniteElementMesh.h  main.cpp
Finite-Element-Tests/tests/MembranePinch6/: CGSystemWrapper.h  CGVectorWrapper.h  CMakeLists.txt  ConjugateGradient.h  FiniteElementMesh.h  main.cpp
Finite-Element-Tests/tests/MembraneStretch1/: AnimatedMesh.h  CMakeLists.txt  FiniteElementMesh.h  main.cpp
Finite-Element-Tests/tests/MembraneStretch2/: CMakeLists.txt  main.cpp
Finite-Element-Tests/tests/MembraneStretch3/: CMakeLists.txt  FiniteElementMesh.h  main.cpp
Finite-Element-Tests/tests/MembraneStretchPD/: CGSystemWrapper.h  CGVectorWrapper.h  CMakeLists.txt  FiniteElementMesh.h  main.cpp
Simple-Deformations/: CMakeLists.txt
Simple-Deformations/tests/: CMakeLists.txt
Simple-Deformations/tests/latticeMesh/: CMakeLists.txt  main.cpp
Simple-Deformations/tests/latticeMeshBoundary/: CMakeLists.txt  main.cpp
Simple-Deformations/tests/latticeMeshBoundaryRelaxation/: CMakeLists.txt  main.cpp
Simple-Deformations/tests/latticeMeshElasticityTest1/: CMakeLists.txt  main.cpp
Simple-Deformations/tests/latticeMeshElasticityTest2/: CMakeLists.txt  main.cpp
Simple-Deformations/tests/latticeMeshElasticityTest3/: CMakeLists.txt  main.cpp
Simple-Deformations/tests/latticeMeshElasticityTest4/: CMakeLists.txt  main.cpp
Simple-Deformations/tests/quadFacedCube/: CMakeLists.txt  main.cpp
USD-Tests/: CMakeLists.txt
USD-Tests/tests/: CMakeLists.txt
USD-Tests/tests/USDtoOBJ/: CMakeLists.txt  main.cpp
USD-Tests/tests/animateAttribute/: CMakeLists.txt  main.cpp
USD-Tests/tests/helloWorld/: CMakeLists.txt  main.cpp
